Add state to adoption request
