# app/controllers/adoption_requests_controller.rb
@@ -1,12 +1,13 @@
-class AdoptionRequestController < ApplicationController
+class AdoptionRequestsController < ApplicationController
   def show
     @adoption_request = AdoptionRequest.new(
+      id: 1,
       name: "Roy",
       email: Faker::Internet.email,
       phone_number: Faker::PhoneNumber.phone_number,
       address: Faker::Address.full_address,
       city: Faker::Address.city,
-      postcode: Faker::Address.zipcode,
+      postcode: '12345',
       state: 'pending'
     )
 
