# app/controllers/pets_controller.rb
@@ -1,5 +1,5 @@
 class PetsController < ApplicationController
-  before_action :find_shelter, only: :index
+  before_action :find_shelter
   before_action :check_user_access
 
   def index
@@ -9,28 +9,50 @@ class PetsController < ApplicationController
   end
 
   def create
-    @pet = Pet.new(pet_params)
+    @pet = Pet.new(pet_params.merge(id: 1))
 
-    render :head, status: :created
+    render json: @pet, root: 'pet', status: :created
+  end
+
+  def set_adoptable
+    @pet = Pet.new(
+      id: 1,
+      image_link: 'http://link.com/1',
+      state: 'unavailable',
+      name: 'Milo',
+      race: 'cat',
+      medical_condition: 'good health',
+      state: 'adoption_available'
+    )
+
+    render json: @pet, root: 'pet'
+  end
+
+  def delist
+    @pet = Pet.new(
+      id: 1,
+      image_link: 'http://link.com/1',
+      state: 'unavailable',
+      name: 'Milo',
+      race: 'cat',
+      medical_condition: 'good health',
+      state: 'unavailable'
+    )
+
+    render json: @pet, root: 'pet'
   end
 
   def show
     @pet = Pet.new(
+      id: 1,
       name: Faker::Creature::Dog.name,
       race: Faker::Creature::Dog.breed,
-      image: "http://cdn.com/1",
-      medical_condition: "Some condition" 
+      image_link: "http://cdn.com/1",
+      medical_condition: "Some condition",
+      state: 'adoption_available'
     )
 
-    render json: @pet
-  end
-
-  def set_adoptable
-    render :head
-  end
-
-  def delist
-    render :head
+    render json: @pet, root: 'pet'
   end
 
   private
@@ -44,8 +66,8 @@ class PetsController < ApplicationController
   end
 
   def authorized_user
-    current_user.account.account_type == 'admin'||
-    current_user.account.shelter.id == @shelter.id
+    current_user.account.account_type == 'admin' ||
+      current_user.account.shelter.id == @shelter.id
   end
 
   def pet_params
